# FE-Attendance-Counter

./: .main.c.swp  CMakeLists.txt  README.md  main.c  wipe_flash.c
lib/GPIO_Buttons/: CMakeLists.txt  GPIO_Buttons.c  GPIO_Buttons.h
lib/GUI/: GUI_Paint.c
lib/OLED/: CMakeLists.txt
lib/ScreenUpdater/: CMakeLists.txt  update_screen.c  update_screen.h
lib/Structs/: CMakeLists.txt  structs.c  structs.h
lib/Writer/: CMakeLists.txt  writer.c  writer.h
